--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>WebpackTask</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+   <title>WebpackTask</title>
+   <script src="./print.bundle.js"></script>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  </head>
+  <body>
+    <h1>Webpack</h1>
+   <script src="./index.bundle.js"></script>
+   <script type="text/javascript" src="polyfills.bundle.js"></script>
+   <script type="text/javascript" src="styles.bundle.js"></script>
+  <script type="text/javascript" src="vendor.bundle.js"></script>
+  <script type="text/javascript" src="main.bundle.js"></script></body>
+  </body>
 </html>
