--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <h1>Webpack</h1>
-   <script src="./index.bundle.js"></script>
-   <script type="text/javascript" src="polyfills.bundle.js"></script>
-   <script type="text/javascript" src="styles.bundle.js"></script>
-  <script type="text/javascript" src="vendor.bundle.js"></script>
-  <script type="text/javascript" src="main.bundle.js"></script></body>
+   <script src="./index.ts"></script>
+   //<script type="text/javascript" src="polyfills.bundle.js"></script>
+   //<script type="text/javascript" src="styles.bundle.js"></script>
+  //<script type="text/javascript" src="vendor.bundle.js"></script>
+  \\<script type="text/javascript" src="main.bundle.js"></script></body>
   </body>
 </html>
